argocd-main/resources/uat/echo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        resources:
          requests:
            memory: "16Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
