argocd-main/resources/uat/echo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
