argocd-main/resources/uat/echo-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-echo
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-resources
  hostnames:
      - test.gw.k8s.sh.aban.io
      - app.gw.k8s.sh.aban.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echoserver
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-echo-api-sec
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-resources
  hostnames:
      - test.gw.k8s.sh.aban.io
      - app.gw.k8s.sh.aban.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echoserver
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api/sec
        - path:
            type: PathPrefix
            value: /admin
